--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-                I am a BCA student at Amrita Mysore University with a CGPA of 9+ in my first year.  
-                I have a strong interest in computer science and have knowledge in C, Java, SQL, DBMS, and Computer Organization.
+                I am a 2<sup>nd</sup> year BCA student at Amrita Mysore University with strong academics and a CGPA of 9.36.  
+                I have a strong interest in computer science and have knowledge in fundamentals like Operating systems, Basic Computer Architecture, C, Java, SQL, DBMS, Computer Networks, Html, CSS and JS (Basics)
             </p>
         </div>
 
@@ -125,20 +125,22 @@
                 <div>C</div>
                 <div>Java</div>
                 <div>SQL</div>
-                <div>DBMS</div>
-  		<div>Communication</div>
-		<div>Problem Solving</div>
+                <div>HTML</div>
+                <div>CSS</div>
+                <div>JS</div>
+  		        <div>Communication</div>
+		        <div>Problem Solving</div>
             </div>
         </div>
 
         <div class="section" id="contact">
             <h2>Contact</h2>
-            <p>Feel free to reach out to me via email at <a href="mailto:virendarvirendar242@gmail.com">virendarvirendar242@gmaile.com</a>.</p>
+            <p>Feel free to reach out to me via email at <a href="mailto:virendarvirendar242@gmail.com">virendarvirendar242@gmail.com</a>.</p>
         </div>
     </div>
 
     <div class="footer">
-        <p>&copy; 2024 Virendar. All rights reserved.</p>
+        <p>&copy; 2025 Virendar. All rights reserved.</p>
     </div>
 </body>
 </html>
