--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Virendar's Personal Webpage</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
@@ -80,7 +80,7 @@
         }
         @keyframes fadeIn {
             from {
-                opacity: 0;
+                opacity: 25%;
             }
             to {
                 opacity: 1;
@@ -92,7 +92,7 @@
                 opacity: 0;
             }
             60% {
-                transform: scale(1.2);
+                transform: scale(1.05);
                 opacity: 1;
             }
             80% {
@@ -140,7 +140,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2025 Virendar. All rights reserved.</p>
+        <p>&copy; 2025 NO Copyright's Reserved :)</p>
     </div>
 </body>
 </html>
