--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="section" id="contact">
             <h2>Contact</h2>
-            <p>Feel free to reach out to me via email at <a href="mailto:virendarvirendar242@gmail.com">virendarvirendar242@gmail.com</a>.</p>
+            <p>Feel free to reach out to me via email at <a href="mailto:virendarvirendar242@gmail.com">virendarvirendar242@gmail.com</a></p>
         </div>
     </div>
 
