--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 <body>
     <div class="header">
         <h1>Virendar</h1>
-        <p>BCA Student at Amrita Mysore University</p>
+        <p>BCA Student at Amrita University Mysore</p>
     </div>
 
     <div class="container">
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-                I am a 2<sup>nd</sup> year BCA student at Amrita Mysore University with strong academics and a CGPA of 9.36.  
+                I am a 2<sup>nd</sup> year BCA student at Amrita University Mysore with strong academics and a CGPA of 9.36.  
                 I have a strong interest in computer science and have knowledge in fundamentals like Operating systems, Basic Computer Architecture, C, Java, SQL, DBMS, Computer Networks, Html, CSS and JS (Basics)
             </p>
         </div>
