--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-                I am a 2<sup>nd</sup> year BCA student at Amrita University Mysore with strong academics and a CGPA of 9.36.  
-                I have a strong interest in computer science and have knowledge in fundamentals like Operating systems, Basic Computer Architecture, C, Java, SQL, DBMS, Computer Networks, Html, CSS and JS (Basics)
-            </p>
-        </div>
+		Hey there! I'm a 2<sup>nd</sup> year BCA student at Amrita University, Mysore,	    
+		rocking a solid CGPA of 9.36. I’m passionate about computer science and have a
+		strong grasp of the fundamentals, including Operating Systems, Computer Architecture,
+		C, Java, SQL, DBMS, Computer Networks, and web development (HTML, CSS, and JavaScript 
+		– just the basics for now!). Always curious, always learning!
+        
 
         <div class="section" id="skills">
             <h2>Skills</h2>
