--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             line-height: 1.6;
         }
         .footer {
+	    display: block;
             background-color: #333;
             color: white;
             text-align: center;
