--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             line-height: 1.6;
         }
         .footer {
-	    display: block;
+            display: block;
             background-color: #333;
             color: white;
             text-align: center;
@@ -108,19 +108,18 @@
 <body>
     <div class="header">
         <h1>Virendar</h1>
-        <p>BCA Student at Amrita University Mysore</p>
+        <p>BCA Student at Amrita Mysore University</p>
     </div>
 
     <div class="container">
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-		Hey there! I'm a 2<sup>nd</sup> year BCA student at Amrita University, Mysore,	    
-		rocking a solid CGPA of 9.36. I’m passionate about computer science and have a
-		strong grasp of the fundamentals, including Operating Systems, Computer Architecture,
-		C, Java, SQL, DBMS, Computer Networks, and web development (HTML, CSS, and JavaScript 
-		– just the basics for now!). Always curious, always learning!
-        
+                Hey there! I'm a 2nd year BCA student at Amrita University, Mysore, rocking a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development (HTML, CSS, and JavaScript – just the basics for now!).
+                <br><br>
+                 Always curious, always learning!
+            </p>
+        </div>
 
         <div class="section" id="skills">
             <h2>Skills</h2>
@@ -143,7 +142,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2025 NO Copyright's Reserved :)</p>
+        <p>&copy; 2025 No Right's Reserved :)</p>
     </div>
 </body>
 </html>
