--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
         .section p {
             line-height: 1.6;
         }
-        .footer {
-            display: block;
-            background-color: #333;
-            color: white;
-            text-align: center;
+	.footer {
+   	    width: 100%;
+ 	    background-color: #333;
+ 	    color: white;
+   	    text-align: center;
             padding: 1rem 0;
-            margin-top: 2rem;
-            animation: slideInFromBottom 1s ease-in-out;
-        }
+    	    margin-top: 2rem;
+    	    animation: slideInFromBottom 1s ease-in-out;
+	}
+
         .skills {
             display: flex;
             flex-wrap: wrap;
