--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virendar's Personal Webpage</title>
+    <title>Virendar's Webpage</title>
+    <link rel="icon" href="https://static-00.iconduck.com/assets.00/github-icon-2048x2048-dpporae2.png";>
     <style>
         body {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -38,16 +39,15 @@
         .section p {
             line-height: 1.6;
         }
-	.footer {
-   	    width: 100%;
- 	    background-color: #333;
- 	    color: white;
-   	    text-align: center;
+        .footer {
+            display: block;
+            background-color: #333;
+            color: white;
+            text-align: center;
             padding: 1rem 0;
-    	    margin-top: 2rem;
-    	    animation: slideInFromBottom 1s ease-in-out;
-	}
-
+            margin-top: 2rem;
+            animation: slideInFromBottom 1s ease-in-out;
+        }
         .skills {
             display: flex;
             flex-wrap: wrap;
@@ -109,7 +109,7 @@
 <body>
     <div class="header">
         <h1>Virendar</h1>
-        <p>BCA Student at Amrita University Mysore</p>
+        <p>BCA Student at Amrita Mysore University</p>
     </div>
 
     <div class="container">
