--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-                Hey there! I'm a 2nd year BCA student at Amrita University, Mysore, rocking a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development (HTML, CSS, and JavaScript – just the basics for now!).
-                <br><br>
+               	 Hey there! I'm a 2<sup>nd</sup> year student pursuing <b>Bachelor of Computer Applications (BCA)</b> at Amrita University, Mysore, with a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development (HTML, CSS, and JavaScript – just the basics for now!).<br><br>
                  Always curious, always learning!
             </p>
         </div>
