--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
     <div class="header">
         <h1>Virendar</h1>
-        <p>BCA Student at Amrita Mysore University</p>
+        <p>BCA Student at Amrita University, Mysore</p>
     </div>
 
     <div class="container">
