--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-                Hey there! I'm a 2<sup>nd</sup> year student pursuing <b>Bachelor of Computer Applications (BCA)</b> at Amrita University, Mysore, with a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development.<br><br>
+                Hey there! I'm a 2<sup>nd</sup> year student pursuing <b>Bachelor of Computer Applications (BCA)</b> at Amrita University, Mysore, with a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development. While my web development skills are currently at the foundational level, I am dedicated to continuous improvement and expanding my expertise.<br><br>
+                Always curious, always learning!<br><br>
                 Always curious, always learning!
             </p>
         </div>
