--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             background-color: white;
             color: #333;
             overflow-x: hidden;
+            font-weight: bolder;
         }
         header {
             background-color: #4CAF50;
@@ -120,8 +121,7 @@
         <div class="section" id="about">
             <h2>About Me</h2>
             <p>
-                Hey there! I'm a 2<sup>nd</sup> year student pursuing <b>Bachelor of Computer Applications (BCA)</b> at Amrita University, Mysore, with a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development. While my web development skills are currently at the foundational level, I am dedicated to continuous improvement and expanding my expertise.<br><br>
-                Always curious, always learning!<br><br>
+                Hey there! I'm a 2<sup>nd</sup> year student pursuing <b>Bachelor of Computer Applications (BCA)</b> at Amrita University, Mysore, with a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development. While my web development skills are currently at the foundational level, I am dedicated to continuously improving and expanding my expertise.<br><br>
                 Always curious, always learning!
             </p>
         </div>
