--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
         footer {
             display: block;
-            background-color: #333;
+            background: linear-gradient(to right, #111111, #333333, #000000);
             color: white;
             text-align: center;
             padding: 1rem 0;
@@ -58,14 +58,15 @@
             color: white;
             margin: 0.5rem;
             padding: 0.5rem 1rem;
-            border-radius: 5px;
+            border-radius: 9px;
             animation: bounceIn 2s ease-in;
+            transition: transform 0.25s ease-in-out;
         }
         header,.skills div {
             background: linear-gradient(to right, #4CAF50, #2E7D32);
         }
         .skills div:hover{
-            scale: 1.06;
+            transform: scale(1.1); 
         }
         @keyframes slideInFromTop {
             from {
@@ -122,7 +123,7 @@
             <h2>About Me</h2>
             <p>
                 Hey there! I'm a 2<sup>nd</sup> year student pursuing <b>Bachelor of Computer Applications (BCA)</b> at Amrita University, Mysore, with a solid CGPA of 9.36. I’m passionate about computer science and have a strong grasp of the fundamentals, including Operating Systems, Computer Architecture, C, Java, SQL, DBMS, Computer Networks, and web development. While my web development skills are currently at the foundational level, I am dedicated to continuously improving and expanding my expertise.<br><br>
-               Laying the groundwork now, sharpening expertise for what’s next!
+                Laying the groundwork now, sharpening expertise for what’s next!
             </p>
         </div>
 
