--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
                 <div>HTML</div>
                 <div>CSS</div>
                 <div>JS</div>
-
                 <div>Communication</div>
                 <div>Problem Solving</div>
+                <div>Design Thinking</div>
+                <div>Time Management</div>
+                <div>Software Engineering</div>
             </div>
         </div>
 
