--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
         header {
             background: var(--base-colorH);
-            color: var(--white-bg);
+            color: #dedede;
             padding: 1rem 0;
             text-align: center;
             animation: slideInFromTop 1s ease-in-out;
