--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             --text-color :  #dedede;
             --secondary-text:  #4CAF50;
             --white-bg: rgb(0, 0, 0);
-            --link:  #4CAF50;
+            --link: #5f97e6;
         }
         #theme-switch {
             height: 50px;
