--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
         header {
             background: var(--base-colorH);
-            color: #dedede;
+            color: hsl(0, 0%, 90%);;
             padding: 1rem 0;
             text-align: center;
             animation: slideInFromTop 1s ease-in-out;
